# OversamplingOscillators

./: .gitignore  BufUnit.cpp  BufUnit.hpp  CMakeLists.txt  Extras.cpp  Extras.hpp  OversamplingOscillators.cpp  OversamplingOscillators.hpp  OversamplingOscillators.sc  OversamplingWavefolders.cpp  OversamplingWavefolders.hpp  OversamplingWavetableOsc.cpp  OversamplingWavetableOsc.hpp  OversamplingWavetableOscillators.cpp  OversamplingWavetableOscillators.hpp  README.md  filter_coefficients.txt  iir.hpp  sergeWavetable.h  serge_cpp.cpp  serge_cpp.h  testSerge.maxpat  wavetables.h
.github/workflows/: build.yml
HelpSource/: FM7OS.schelp  ImpulseBL.schelp  PM7OS.schelp  PMOscOS.schelp  SawBL.schelp  SawOS.schelp  SinOscOS.schelp  SquareOS.schelp  TriOS.schelp  VarSawOS.schelp
OversamplingOscillators/: OversamplingOscillators.sc  README.md  windows.cpp
OversamplingOscillators/Classes/: OversamplingOscillators.sc
OversamplingOscillators/HelpSource/: BuchlaFoldOS.schelp  FM7OS.schelp  FM7aOS.schelp  FM7bOS.schelp  OscOS.schelp  OscOS3.schelp  PM7OS.schelp  PMOscOS.schelp  SawBL.schelp  SergeFoldOS.schelp  ShaperOS.schelp  ShaperOS2.schelp  SquareBL.schelp  SquareOS.schelp  TriBL.schelp  TriOS.schelp  VarSawOS.schelp
OversamplingOscillators/scxFiles/: ImpulseBL.scx  ShaperOS.scx
chowdsp_utils/modules/dsp/chowdsp_dsp_utils/Resampling/: chowdsp_VariableOversampling.h
