cmake_minimum_required (VERSION 2.8)

set(lib_name "OversamplingOscillators")
project("${lib_name}")

add_definitions(-w)

# set installation directory
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT OR NOT CMAKE_INSTALL_PREFIX)
  set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/${lib_name}" CACHE PATH "Install prefix" FORCE)
else()
  set(CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/${lib_name}")
endif()

include_directories(${SC_PATH}/include/plugin_interface)
include_directories(${SC_PATH}/include/common)
include_directories(${SC_PATH}/external_libraries/libsndfile/)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_SHARED_MODULE_PREFIX "")
if(APPLE OR WIN32)
set(CMAKE_SHARED_MODULE_SUFFIX ".scx")
endif()

add_library(SawOS MODULE OversamplingOscillators.cpp)
add_library(VariableRamp MODULE OversamplingOscillators.cpp)
add_library(SinOscOS MODULE OversamplingOscillators.cpp)
add_library(TriOS MODULE OversamplingOscillators.cpp)
add_library(VarSawOS MODULE OversamplingOscillators.cpp)
add_library(SquareOS MODULE OversamplingOscillators.cpp)
add_library(PMOscOS MODULE OversamplingOscillators.cpp)
add_library(FM7OS MODULE OversamplingOscillators.cpp)
add_library(FM7aOS MODULE OversamplingOscillators.cpp)
add_library(FM7bOS MODULE OversamplingOscillators.cpp)
add_library(PM7OS MODULE OversamplingOscillators.cpp)
add_library(SawBL MODULE OversamplingOscillators.cpp)
add_library(SquareBL MODULE OversamplingOscillators.cpp)
add_library(ImpulseBL MODULE OversamplingOscillators.cpp)
add_library(TriBL MODULE OversamplingOscillators.cpp)
add_library(ShaperOS MODULE OversamplingWavetableOscillators.cpp)
add_library(ShaperOS2 MODULE OversamplingWavetableOscillators.cpp)
add_library(OscOS MODULE OversamplingWavetableOscillators.cpp)
# add_library(OscMOS MODULE OversamplingWavetableOscillators.cpp)
add_library(OscOS2 MODULE OversamplingWavetableOscillators.cpp)
add_library(OscOS3 MODULE OversamplingWavetableOscillators.cpp)
add_library(BuchlaFoldOS MODULE OversamplingWavetableOscillators.cpp)
add_library(SergeFoldOS MODULE OversamplingWavetableOscillators.cpp)

install(DIRECTORY "${lib_name}/Classes" "${lib_name}/HelpSource" DESTINATION "${CMAKE_INSTALL_PREFIX}")

install(DIRECTORY DESTINATION "${CMAKE_INSTALL_PREFIX}/scx_files")

if(APPLE)
  install(FILES ${CMAKE_BINARY_DIR}/SawOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/VariableRamp.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/SinOscOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/TriOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/VarSawOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/SquareOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/PMOscOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/FM7OS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/FM7aOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/FM7bOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/PM7OS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/SawBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/SquareBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/ImpulseBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/TriBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/ShaperOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/ShaperOS2.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/OscOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  # install(FILES ${CMAKE_BINARY_DIR}/OscMOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/OscOS2.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/OscOS3.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/BuchlaFoldOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/SergeFoldOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
endif()

if(WIN32)
  install(FILES ${CMAKE_BINARY_DIR}/Release/SawOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/VariableRamp.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/SinOscOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/TriOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/VarSawOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/SquareOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/PMOscOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/FM7OS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/FM7aOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/FM7bOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/PM7OS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/SawBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/SquareBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/ImpulseBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/TriBL.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/ShaperOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/ShaperOS2.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/OscOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  # install(FILES ${CMAKE_BINARY_DIR}/Release/OscMOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/OscOS2.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/OscOS3.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/BuchlaFoldOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
  install(FILES ${CMAKE_BINARY_DIR}/Release/SergeFoldOS.scx DESTINATION ${CMAKE_INSTALL_PREFIX}/scx_files)
endif()
